@@ -73,6 +73,7 @@ public class S3ObjectClient {
     private List<FileLastModifiedDate> listObjects(Pattern fileNameMatchRegex, Duration period, Clock clock, ListObjectsV2Request request) {
         List<FileLastModifiedDate> objectPaths = new LinkedList<>();
         ListObjectsV2Result objectList;
+        LocalDateTime upperTimeBound = LocalDateTime.now(clock).minus(period);
         do {
             objectList = s3.listObjectsV2(request);
             List<S3ObjectSummary> objectSummaries = objectList.getObjectSummaries();
@@ -83,7 +84,7 @@ public class S3ObjectClient {
 
                 boolean fileNameMatches = fileNameMatchRegex.matcher(summaryKey).matches();
                 LocalDateTime lastModifiedDateTime = summary.getLastModified().toInstant().atZone(clock.getZone()).toLocalDateTime();
-                boolean modifiedBeforeCurrentDateTime = lastModifiedDateTime.isBefore(LocalDateTime.now(clock).minus(period));
+                boolean modifiedBeforeCurrentDateTime = lastModifiedDateTime.isBefore(upperTimeBound);
                 if (!summaryKey.endsWith(DELIMITER) && fileNameMatches && modifiedBeforeCurrentDateTime) {
                     logger.debug("Adding {}", summaryKey);
                     objectPaths.add(new FileLastModifiedDate(summaryKey, lastModifiedDateTime));
@@ -110,7 +111,7 @@ public class S3ObjectClient {
             logger.info("Deleting {} of {} objects", deletedObjectsCount, objectKeys.size());
             List<DeleteObjectsRequest.KeyVersion> objectKeyVersions = partition.stream()
                     .map(DeleteObjectsRequest.KeyVersion::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             DeleteObjectsRequest request = new DeleteObjectsRequest(sourceBucket).withKeys(objectKeyVersions).withQuiet(true);
             Set<String> failedDeletesInCurrentBatch = s3.deleteObjects(request)
